# mystery

./: .gitmodules  build.sh  index.html  package.json  svelte.config.js
plugins/: count_vowels.wasm  esbuild.js  package-lock.json  package.json
plugins/src/: index.js
resources/: Families.json  body.type.json  city.name.json  clinic.json  corp.json  descriptions.json  district.json  eyebrows.json  eyes.color.json  eyes.general.json  face.hair.json  face.mouth.json  face.nose.json  face.structure.json  factions.json  factory.json  female_name.json  hair.color.json  hair.general.json  hands.json  hobbies.json  hobby.individual.json  monument.json  names_male.json  occupation.json  parks.json  personality.json  salon.json  skin.color.json  skin.general.json  sport_fields.json  streets.json  tags.json  traits.negative.json  traits.neutral.json  traits.positive.json
src/: App.svelte  gpt.js  stores.js  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/mystery/: city_gen.cpp  city_gen_init.cpp  main.cpp
src-tauri/mystery/generators/: date_gen.cpp  name_gen.cpp  person_gen.cpp
src-tauri/mystery/include/: db_manager.hpp  entity_manager.hpp  facade.hpp  generator.hpp  group_manager.hpp  randomizer.hpp  relation_manager.hpp  utils.hpp
src-tauri/mystery/include/generators/: city_gen.hpp  date_gen.hpp  location_gen.hpp  name_gen.hpp  person_gen.hpp
src-tauri/mystery/include/specs/: common_specs.hpp  dates_spec.hpp  names_spec.hpp  person_spec.hpp
src-tauri/src/: common.rs  main.rs
src/lib/: Chart.svelte  Chip.svelte  Entity.svelte  (+13 more)
(+1 files in other folders)
