[package]
name = "mystery"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }
cxx-build = "1.0"
cc = "1.0"

[dependencies]
tauri = { version = "1.4", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.13.3"
toml = "0.7.6"
# extism = { git = "https://github.com/extism/extism.git", version = "0.4.0" }
custom_error = "1.9.2"
# cxx = { git = "https://github.com/dtolnay/cxx.git", version = "1.0.100" }
cxx = "1.0"
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

# [target.x86_64-unknown-linux-gnu]
